route.tf
resource "aws_route" "internet_access_web" {
  route_table_id         = aws_route_table.publicroute.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}

resource "aws_route" "internet_access_web_bastion" {
  route_table_id         = aws_route_table.publicroute2.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}
